# NARUU_PROJECT

./: .gitignore  BUNDLE_README.md  CLAUDE.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/versions/: 001_initial_schema.sql
backend/naruu_api/: __init__.py  config.py  db.py  deps.py  main.py
backend/naruu_api/routers/: auth.py  bookings.py  customers.py  health.py  partners.py  products.py
backend/naruu_api/routes/: __init__.py  auth.py  content.py  crm.py  health.py  line_webhook.py  partners.py  plugins.py  recommend.py
backend/naruu_core/: __init__.py  config.py  db.py  event_bus.py  orchestrator.py  plugin_manager.py
backend/naruu_core/auth/: __init__.py  jwt_handler.py  middleware.py  password.py
backend/naruu_core/models/: __init__.py  base.py  booking_models.py  content.py  customer.py  customer_models.py  partner.py  partner_models.py  product_models.py  recommendation.py  user.py
backend/naruu_core/plugins/: __init__.py  base.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_content.py  test_content_pipeline.py  test_crm.py  test_database.py  test_e2e_pipeline.py  test_event_bus.py  test_event_wiring.py  test_line_crm_integration.py  test_orchestrator.py  test_partner.py  test_plugin_manager.py  test_recommend.py
naberal_base/: .env.example  .gitignore  CLAUDE.md  TODO.md  alembic.ini  constraints.txt  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  requirements.txt
naberal_base/alembic/: env.py
naberal_base/alembic/versions/: 001_add_kpew_tables.py  20251018_catalog_items_table.py  20251027_quotes_table.py  20251109_add_catalog_name.py  20251123_estimates_table.py  20251125_catalog_columns.py  20251125_verb_plans_table.py  20251126_seed_breaker_data.py  20251128_epdl_created_by.py  20251128_estimate_id_sequence.py  20251201_erp_full_tables.py  20251213_add_learning_tables.py  20260205_users_table.py  20260206_nw_oauth_tokens.py  20260208_accounting_tables.py  20260209_audit_log.py  20260209_settings_periods.py
naberal_base/api/: cache.py  config.py  db.py  error_handler.py  main.py  openapi.yaml
naberal_base/api/contract/: openapi.extend.yaml
naberal_base/api/middleware/: __init__.py  idempotency.py  performance.py  rate_limit.py
naberal_base/api/models/: __init__.py  erp.py
naberal_base/api/routers/: catalog.py  drawings.py  estimate.py  kpew.py  public.py  quotes.py
naberal_base/db/: schema.sql
naberal_base/db/migrations/: 20250930_init.sql  20251015_verb_plans.sql
naberal_base/docs/: ERP_FUNCTION_ANALYSIS_REPORT.md  FRONTEND_PLAN.md  HANDOVER1205.md  api-integration-guide.md  deployment-guide.md
naberal_base/docs/plans/: 2025-12-07-ai-manager-system.md  2025-12-07-customer-receivables-auto-update.md  2025-12-07-missing-features-analysis.md  PLAN_Backend_Completion_2025-11-28.md  PLAN_Frontend_Rebuild_Complete_2025-11-26.md
naberal_base/frontend/: check-db-schema.mjs  discover-columns.mjs  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  vercel.json
naberal_base/frontend/electron/: main.js  preload.js  test-electron.js
naberal_base/frontend/lib/: API_CLIENT_SUMMARY.md
naberal_base/frontend/public/: robots.txt
naberal_base/frontend/tests/: e2e-comprehensive.spec.ts
naberal_base/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service.yaml
naberal_base/ops/cost/: export_telemetry.sh
naberal_base/ops/dr/: run_dr_drill.sh
naberal_base/ops/env/: .env.ops.append  .env.prod.append
naberal_base/ops/keys/: rotate_keys.sh
naberal_base/scripts/: RLS_STATUS.md  analyze_coverage.py  analyze_template.py  api_performance.py  apply_option1_materialized.sql  audit_spec_kit.py  bulk_import_erp.py  cache_ttl_validation.py  ceo_estimate_request.py  check_existing_schema.sql  check_legacy_cleanup.sh  check_openapi.sh  check_openapi_metadata.py  check_package_coverage.sh  check_ratchet.sh  check_rls_status.sql  check_ssot_hash.sh  check_supabase_tables.py  check_view_details.sql  ci_package_guards_integration.yml  codemod_error_schema.py  codemod_fix_blank_init.py  codemod_fix_magic_literals.py  codemod_remove_mockup.py  compare_estimate_files.py  convert_catalog_to_ai.py  convert_view_to_table.sql  cov_harvest.sh  cov_harvest_all.sh  cov_harvest_phase_iv.sh  coverage_guard.py  create_catalog_items_table.sql  create_catalog_table_simple.py  deploy_db.py  deploy_naberal_schema.py  deploy_schema.py  deploy_schema_simple.py  deploy_via_api.py  deploy_via_http.py  dr_rehearsal.sh  (+48 more)
naberal_base/spec_kit/api/: openapi.yaml
naberal_base/spec_kit/knowledge/: 1_breakers.json  2_enclosures.json  (+4 more)
naberal_base/specs/: epdl.schema.json
naberal_base/tests/: TEST_REPORT_5th.md  TEST_REPORT_6th.md  TEST_REPORT_7th.md  TEST_REPORT_8th.md  TEST_REPORT_9th.md  api_test_results.json  conftest.py  diag_auth.js  e2e_backend_api_test.js  e2e_frontend_test.js  full_audit_results.json  full_button_audit.js  issue_verification_results.json  issue_verification_test.js  ralph_wiggum_verifier.js  test_estimate_logic.py
(+992 files in other folders)
