# KIS Estimator - Project Configuration
# Phase VIII: Quality Ratchet System

[project]
name = "kis-estimator-core"
version = "2.0.0"
description = "KIS Electrical Panel Estimation AI System"
requires-python = ">=3.11"

[project.optional-dependencies]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[tool.coverage.run]
source = ["src/kis_estimator_core"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/old_engine/*",  # Sunset: deprecated
    "*/.venv/*",
]

[tool.coverage.report]
# Phase VIII Ratchet: 60 → 62 → 65 → 70
# Current threshold (update after 3 consecutive greens)
fail_under = 60
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstract",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Package-level coverage guards (Phase VIII-2)
# core >= 75%, infra >= 70%, engine >= 68%
[tool.coverage.package_guards]
# NOTE: These are enforced via CI script, not native coverage.py
# See .github/workflows/kis-ci.yml for enforcement
"kis_estimator_core.core" = 75
"kis_estimator_core.infra" = 70
"kis_estimator_core.engine" = 68
"kis_estimator_core.services" = 65
"kis_estimator_core.api" = 60

[tool.pytest.ini_options]
pythonpath = [". ", "src"]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "3.11"
addopts = "-q --asyncio-mode=auto --strict-markers --tb=short"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (database, file I/O)",
    "e2e: End-to-end tests (full workflow)",
    "slow: Slow running tests",
    "smoke: Smoke tests (quick validation)",
    "regression: Regression tests (20/20 required)",
    "critical: Critical path tests that must pass",
    "requires_db: Tests requiring real database connection (Zero-Mock)",
    "requires_server: Tests requiring running server (Zero-Mock)",
    "probe: API probe tests (health, contract, fail-fast)",
    "flaky: mark test as potentially flaky (with rerun)",
    "jwt: JWT authentication tests",
    "jwt_rs256: JWT RS256/JWKS tests",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011", "B017"]

[tool.ruff.isort]
known-first-party = ["kis_estimator_core"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "old_engine/",
    "tests/",
    ".venv/",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | old_engine
    | __pycache__
)/
'''

# Ratchet tracking (Phase VIII-1)
# Update this section after 3 consecutive CI greens
[tool.kis_ratchet]
current_threshold = 60
consecutive_greens = 0
next_threshold = 62
ratchet_steps = [60, 62, 65, 68, 70, 75, 80]
last_updated = "2025-11-27"
